# mfem

./: .clang-format  .gitignore  CHANGELOG  CMakeLists.txt  COPYRIGHT  GNUmakefile  INSTALL  README  SConstruct  config.hpp  makefile  mfem-performance.hpp  mfem.hpp
_dev/: discrete-operators.cpp  ex1px.cpp  ex1x.cpp  ex3px.cpp  ex3x.cpp  ex4x.cpp  ex5p.cpp  ex6.cpp  ex7.cpp  ex7_matrices.py  ex8.cpp  ex9.cpp  hexahedron.mesh  makefile  print_quadrature_rule.cpp  quadrilateral.mesh  test_interp.cpp  test_simplex_intrules.cpp  tetrahedron.mesh  triangle.mesh  view_basis.cpp
backends/base/: array.hpp
backends/hypre/: fespace.cpp  fespace.hpp  layout.hpp  parmatrix.cpp  parmatrix.hpp  solvers.cpp  solvers.hpp
backends/kernels/: kernels.hpp
backends/occa/: abilininteg.cpp  abilininteg.hpp  array.hpp  bilinearform.cpp  bilinearform.hpp  engine.cpp  engine.hpp
cmake/modules/: FindMETIS.cmake  FindNetCDF.cmake  MfemCmakeUtilities.cmake
config/: CMakeLists.txt  MFEMConfig.cmake.in  config.hpp  config.hpp.in  config.hpp.in_cmake  config.mk  config.mk.in  defaults.cmake  defaults.mk  makefile  mfem.astylerc  occaConfig.mk.x  tconfig.hpp  test.mk  user.mk  user.mk.in
data/: TwelveTet10.gen  TwelveTet4.gen  TwoHex27.gen  TwoHex8.gen  beam-hex.vtk  beam-quad.vtk  beam-tet.vtk  beam-tri.vtk  escher-p2.vtk  escher.vtk  fichera-q2.vtk  fichera.vtk  inline-hex.mesh  inlineHex.mesh  inlineQuad.mesh  inlineTet.mesh  inlineTri.mesh  klein-bottle.mesh  klein-donut.mesh  klien-bottle-quad-flat.mesh  mobius-strip-quad-flat.mesh  mobius-strip.mesh  periodic-cube.mesh  pipe-nurbs.mesh  quad.000000  quad.000001  quad.000002  quad.000003  rod-hex8.gen  rod-tet4.gen  square-disc-nurbs.mesh  square-disc-p2.vtk  square-disc.vtk  square-torus-n1.mesh  star-hilbert.mesh  star-q2.vtk  star.vtk  torus-square.mesh  trunc-oct-n1.mesh  trunc-oct-n15.mesh  (+2 more)
dev/: Makefile  README  assign_ops.hpp  bilinearform.hpp  coefficient.hpp  config.hpp  diffusion_kernel.hpp  eltrans.hpp  ex1t.cpp  fespace_h1.hpp  fespace_l2.hpp  field_evaluator.hpp  finite_elements_h1.hpp  integration_rules.hpp  integrator.hpp  layouts.hpp  makefile  mass_kernel.hpp  mass_operator.hpp  matrix_products.hpp  mesh.hpp  new-templates-test.cpp  new-templates.hpp  shape_evaluators.hpp  small_matrix_ops.hpp  tassembler-test.cpp  tassembler.hpp  tbasis-test.cpp  tbasis.hpp  tensor_ops.hpp  tensor_products.hpp  tensor_types.hpp  test.cpp  tinteg.hpp  tmatrix-test.cpp  vector_layouts.hpp
doc/: CMakeLists.txt  CodeDocumentation.conf  CodeDocumentation.conf.cmake_in  CodeDocumentation.conf.in  CodeDocumentation.dox  Examples.conf  Examples.dox  MFEM_CodeDocumentation.conf  MFEM_ExamplesDocumentation.conf  README  examples.dox  index.html  main.dox  makefile
examples/: .petsc_rc_ex1p  .petsc_rc_ex3p  .petsc_rc_ex3p_bddc  .petsc_rc_ex4p  .petsc_rc_ex5p_bddc  .petsc_rc_ex9p  .petsc_rc_ex9p_expl  .petsc_rc_ex9p_impl  CMakeLists.txt  README.html  SConstruct  TODO  build  ex-dpg-hdiv-ams.cpp  ex-dpg-hdiv.cpp  ex-dpg-schur-ams.cpp  ex-dpg-schur.cpp  ex-dpg.cpp  ex1.cpp  ex10.cpp  ex10imp.cpp  ex10p.cpp  ex11p.cpp  ex12p.cpp  ex13p.cpp  ex14.cpp  ex14p.cpp  ex15.cpp  ex15p.cpp  ex16.cpp  ex16_mhs.cpp  ex16p.cpp  ex16p_mhs.cpp  ex17.cpp  ex17p.cpp  ex1amr.cpp  ex1d.cpp  ex1p.cpp  ex1scp.cpp  ex2.cpp  (+40 more)
fem/: CMakeLists.txt  adiffusioninteg.cpp  adiffusioninteg.hpp  amassinteg.cpp  amassinteg.hpp  bilinearform.cpp  bilinearform.hpp  bilininteg.cpp  bilininteg.hpp  coefficient.cpp  coefficient.hpp  dalg.hpp  datacollection.cpp  datacollection.hpp  datacollection_utility.cpp  datacollection_utility.hpp  dgfacefunctions.cpp  dgfacefunctions.hpp  dgpabilininteg.hpp  domainkernels.hpp  eltrans.cpp  eltrans.hpp  ep.cpp  ep.hpp  estimators.cpp  estimators.hpp  facekernels.hpp  fe.cpp  fe.hpp  fe_coll.cpp  fe_coll.hpp  fem.hpp  fespace.cpp  fespace.hpp  geom.cpp  geom.hpp  gridfunc.cpp  gridfunc.hpp  hybridization.cpp  hybridization.hpp  (+59 more)
general/: CMakeLists.txt  adios2stream.cpp  adios2stream.hpp  array.cpp  array.hpp  communication.cpp  communication.hpp  config.hpp  cuda.hpp  datacollection.cpp  datacollection.hpp  error.cpp  error.hpp  gzstream.cpp  gzstream.hpp  hash.hpp  idgenerator.hpp  isockstream.cpp  isockstream.hpp  mem_alloc.hpp  mm.cpp  mm.hpp  okina.hpp  optparser.cpp  optparser.hpp  osockstream.cpp  osockstream.hpp  picojson.hpp  sets.cpp  sets.hpp  socketstream.cpp  socketstream.hpp  sort_pairs.cpp  sort_pairs.hpp  stable3d.cpp  stable3d.hpp  table.cpp  table.hpp  text.hpp  text_parsing.hpp  (+3 more)
gzstream/: README  gzstream.cpp  gzstream.hpp  index.html
interface_sundials/: Makefile  ex9_arkode_rk.cpp  ex9_compare.cpp  ex9_mfem_rk.cpp  ex9_stripped.cpp  ex9_sundials.cpp  sundials.cpp  sundials.hpp  test_compare.sh
linalg/: CMakeLists.txt  bicgstab.cpp  blockMatrix.cpp  blockMatrix.hpp  blockOperator.cpp  blockOperator.hpp  blockVector.cpp  blockVector.hpp  blockmatrix.cpp  blockmatrix.hpp  blockoperator.cpp  blockoperator.hpp  blockvector.cpp  blockvector.hpp  cgsolver.cpp  complex_operator.cpp  densemat.cpp  densemat.hpp  eliminate.cpp  eliminate.hpp  gmres.cpp  handle.cpp  handle.hpp  hypre.cpp  hypre.hpp  hypre_ext.cpp  hypre_ext.hpp  hypre_parcsr.cpp  hypre_parcsr.hpp  invariants.hpp  linalg.hpp  matrix.cpp  matrix.hpp  ode.cpp  ode.hpp  operator.cpp  operator.hpp  ovector.cpp  ovector.hpp  pcgsolver.cpp  (+24 more)
mesh/: CMakeLists.txt  allocator.cpp  allocator.hpp  controls.cpp  controls.hpp  element.cpp  element.hpp  hexahedron.cpp  hexahedron.hpp  mesh.cpp  mesh.hpp  mesh_headers.hpp  mesh_operators.cpp  mesh_operators.hpp  mesh_readers.cpp  mesquite.cpp  mesquite.hpp  ncmesh.cpp  ncmesh.hpp  ncmeshhex.cpp  ncmeshhex.hpp  nurbs.cpp  nurbs.hpp  pmesh.cpp  pmesh.hpp  pncmesh.cpp  pncmesh.hpp  point.cpp  point.hpp  quadrilateral.cpp  quadrilateral.hpp  segment.cpp  segment.hpp  tetrahedron.cpp  tetrahedron.hpp  tmesh.hpp  triangle.cpp  triangle.hpp  vertex.cpp  vertex.hpp
miniapps/: CMakeLists.txt
miniapps/common/: CMakeLists.txt  fem_extras.cpp  fem_extras.hpp  makefile  mesh_extras.hpp  pfem_extras.cpp  pfem_extras.hpp
pamr-dev/: exHCurlp.cpp
(+164 files in other folders)
